--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^7.13.4",
     "@tabler/core": "^1.0.0-beta21",
     "@tabler/icons-react": "^3.20.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
