--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "dayjs": "^1.11.13",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-canvas-confetti": "^2.0.7",
+    "react-confetti": "^6.1.0",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-rewards": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
