--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-rewards": "^2.0.4",
+    "react-sparkle": "^2.0.0",
     "react-spring": "^9.7.4"
   },
   "devDependencies": {
